[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/new newer plaza tile.png" type="Texture" id=1]
[ext_resource path="res://Areas/M4 - Town Square/M4-Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://m4parallax.png" type="Texture" id=3]
[ext_resource path="res://Areas/M4 - Town Square/backgroundm4.gd" type="Script" id=4]
[ext_resource path="res://Areas/M4 - Town Square/m4enemyrev.tscn" type="PackedScene" id=5]
[ext_resource path="res://Areas/M4 - Town Square/m4rev.gd" type="Script" id=6]
[ext_resource path="res://Areas/M4 - Town Square/enemytimer.gd" type="Script" id=7]
[ext_resource path="res://Areas/M4 - Town Square/M4-Mayor.tscn" type="PackedScene" id=8]
[ext_resource path="res://Areas/M4 - Town Square/M4-House.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/VisibilityMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/m4VisibilityMenu.gd" type="Script" id=12]
[ext_resource path="res://mus_j_mayor_platformer.ogg" type="AudioStream" id=13]
[ext_resource path="res://title.png" type="Texture" id=14]
[ext_resource path="res://Assets/dogicapixelbold.ttf" type="DynamicFontData" id=15]

[sub_resource type="Environment" id=7]
background_mode = 4
adjustment_enabled = true

[sub_resource type="TileSet" id=5]
0/name = "new newer plaza tile.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 18, 66, 28 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "new newer plaza tile.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 66, 36, 66, 9 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "new newer plaza tile.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 18, 66, 28 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "new newer plaza tile.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 66, 36, 66, 30 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 409.5, 27.5 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 15 )

[node name="m4rev" type="Node2D"]
position = Vector2( 0, -32 )
script = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[node name="backgroundm4" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="backgroundm4"]
motion_mirroring = Vector2( 1050, 0 )

[node name="backgronud" type="Sprite" parent="backgroundm4/ParallaxLayer"]
position = Vector2( 523, 246 )
scale = Vector2( 3.5, 3.7 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 22, 300, 138 )

[node name="TileMap2" type="TileMap" parent="backgroundm4/ParallaxLayer"]
position = Vector2( 0, -35 )
scale = Vector2( 2, 2 )
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 29 )
format = 1
tile_data = PoolIntArray( 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0 )

[node name="TileMap" type="TileMap" parent="backgroundm4/ParallaxLayer"]
position = Vector2( 0, -35 )
scale = Vector2( 2.045, 2 )
tile_set = SubResource( 6 )
cell_size = Vector2( 64, 29 )
format = 1
tile_data = PoolIntArray( 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 48, 356 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 363, 195 )
shape = SubResource( 4 )

[node name="House" parent="." instance=ExtResource( 9 )]
position = Vector2( 518, 414 )
scale = Vector2( 6, 6 )

[node name="m4enemyrev" parent="." instance=ExtResource( 5 )]
position = Vector2( 1012, 481 )
scale = Vector2( 3, 3 )

[node name="M4-Mayor" parent="." instance=ExtResource( 8 )]
position = Vector2( -326, 72 )

[node name="M4-Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 46, 473 )

[node name="m4revgame" type="Node2D" parent="."]
position = Vector2( 3, -20 )

[node name="scoreTimer" type="Timer" parent="m4revgame"]
autostart = true

[node name="Timer" type="Timer" parent="m4revgame"]
wait_time = 60.0

[node name="CanvasLayer" type="CanvasLayer" parent="m4revgame"]

[node name="Sprite" type="Sprite" parent="m4revgame/CanvasLayer"]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 630.5, 24 )
scale = Vector2( 2.44, 2 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 112.101, 251.158, 75.6884, 23.0454 )

[node name="Sprite3" type="Sprite" parent="m4revgame/CanvasLayer"]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 103, 24 )
scale = Vector2( 2.7, 2 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 112.101, 251.158, 75.6884, 23.0454 )

[node name="Sprite2" type="Sprite" parent="m4revgame/CanvasLayer"]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 883, 24 )
scale = Vector2( 3, 2 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 112.101, 251.158, 75.6884, 23.0454 )

[node name="Timer" type="RichTextLabel" parent="m4revgame/CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 279.0
margin_top = 16.0
margin_right = 529.0
margin_bottom = 116.0
custom_fonts/normal_font = SubResource( 8 )
text = "Time Left: "

[node name="Pause(esc)" type="RichTextLabel" parent="m4revgame/CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -487.0
margin_top = 16.0
margin_right = -237.0
margin_bottom = 116.0
custom_fonts/normal_font = SubResource( 8 )
text = "Pause (esc)"

[node name="Score" type="RichTextLabel" parent="m4revgame/CanvasLayer"]
margin_left = 559.0
margin_top = 15.0
margin_right = 770.0
margin_bottom = 55.0
custom_fonts/normal_font = SubResource( 9 )
text = "Score:"

[node name="Pause" parent="m4revgame/CanvasLayer" instance=ExtResource( 11 )]
margin_left = -1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 1.0

[node name="VisibilityMenu" parent="m4revgame/CanvasLayer" instance=ExtResource( 10 )]
script = ExtResource( 12 )

[node name="mayortimer" type="Timer" parent="."]
wait_time = 52.0
autostart = true

[node name="housetimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="enemytimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 7 )

[connection signal="hit" from="M4-Player" to="." method="_on_M4Player_hit"]
[connection signal="timeout" from="m4revgame/scoreTimer" to="." method="_on_scoreTimer_timeout"]
[connection signal="timeout" from="m4revgame/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="mayortimer" to="." method="_on_mayortimer_timeout"]
[connection signal="timeout" from="housetimer" to="." method="_on_housetimer_timeout"]
[connection signal="timeout" from="enemytimer" to="." method="_on_enemytimer_timeout"]
